<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_bg"
    android:padding="14dp">

    <LinearLayout
        android:id="@+id/widget_title_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/img_widget_logo"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/tv_widget_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/widget_title"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/widget_ring_container"
        android:layout_width="@dimen/widget_ring_size"
        android:layout_height="@dimen/widget_ring_size"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/img_widget_ring"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/widget_title" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_widget_days_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_widget_days_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_days_left"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/widget_dates_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/widget_ring_container"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_widget_removal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/home_removal_on_placeholder"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_widget_insertion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/home_insertion_on_placeholder"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>
</RelativeLayout>
